--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Cravings Restaurant</title>
 </head>
 <body>
-    <h1><b>Welcome to Cravings Restaurant</b></h1>
+    <h1><b>Welcome to Poojitha Restaurant</b></h1>
 <blockquote><i>--A taste of perfection in every bite</i></blockquote>
 
 
