--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Cravings Restaurant</title>
 </head>
 <body>
-    <h1><b>Welcome to Poojitha Restaurant</b></h1>
-<blockquote><i>--A taste of perfection in every bite</i></blockquote>
+    <center><h1><b>Welcome to Cravings Restaurant</b></h1></center>
+<center><blockquote><i>--A taste of perfection in every bite</i></blockquote></center>
 
 
 <ul>
@@ -17,8 +17,8 @@
     <li><a href="./Contact Us.html">Contact Us</a></li>
     
     <br>
-    <img src="https://tse1.mm.bing.net/th?id=OIP.EKfUBXXUDTOnee4A_Uh0RQAAAA&pid=Apia" alt="LOGO" height="20%" width="20%">
-    <h2>OUR LOGO</h2>
+    <center><img src="https://tse1.mm.bing.net/th?id=OIP.EKfUBXXUDTOnee4A_Uh0RQAAAA&pid=Apia" alt="LOGO" height="20%" width="20%"></center>
+    <center><h2>OUR LOGO</h2></center>
 
     <hr>
 
