--- a/Contact Us.html
+++ b/Contact Us.html
@@ -6,16 +6,16 @@
     <title>Contact Details</title>
 </head>
 <body>
-    <h1><b>Welcome to Cravings Restaurant</b></h1>
-    <blockquote><i>--A taste of perfection in every bite</i></blockquote>
+    <center><h1><b>Welcome to Cravings Restaurant</b></h1></center>
+    <center><blockquote><i>--A taste of perfection in every bite</i></blockquote></center>
     <br>
     <li><a href="./index.html">Home</a></li>
     <li><a href="./Menu.html">Menu</a></li>
     <li><a href="./Craving hours.html">Cravings Hours</a></li>
     <br>
 
-    <img src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/restaurant-contact-us-social-media-post-design-template-a8b2446f0a329aa6afd6ac728363495a_screen.jpg?ts=1694552824"alt="ContactUs" height="20%" width="20%">
-    <h2>Get in Touch: We're Here to Serve You!</h2> 
+    <center><img src="https://d1csarkz8obe9u.cloudfront.net/posterpreviews/restaurant-contact-us-social-media-post-design-template-a8b2446f0a329aa6afd6ac728363495a_screen.jpg?ts=1694552824"alt="ContactUs" height="20%" width="20%"></center>
+    <center><h2>Get in Touch: We're Here to Serve You!</h2></center> 
     <hr>
      
 
