--- a/Menu.html
+++ b/Menu.html
@@ -6,11 +6,13 @@
     <title>Cravings Menu</title>
 </head>
 <body>
-    <h1><i>Cravings Menu</i></h1>
-    <br>
-    <img src="https://b.zmtcdn.com/data/menus/658/21008658/7ada8ab3aa2310f93bae063eb82d39a7.png"alt= "OURLOGO" height="40%" width="40%">
+    <center><h1><u>Cravings Menu</u></h1></center>
+    
 
-    <table border="4">
+    <br>
+    <center><img src="https://b.zmtcdn.com/data/menus/658/21008658/7ada8ab3aa2310f93bae063eb82d39a7.png"alt= "OURLOGO" height="40%" width="40%">
+    </center>
+    <center><table border="4" width="50%"></center>
 
         <tr>
             <th>Food Items</th>
@@ -35,6 +37,11 @@
             <td>1</td>
             <td>249/-</td>
         </tr>
+        <pre>
+
+
+
+        </pre>
         
 </body>
 </html>
