--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 <hr>
 
-  <h1 id="About us">About Cravings</h1>
+  <center><h1 id="About us">About Cravings</h1></center>
   <p>Taste the best food in the world, you will enjoy every piece of food while eating.This restaurant offers a culinary experience that involves tradition and etiquette, and is often expensive.This restaurant offers familiar dishes that are often served quickly and conveniently for grab-and-go.
 
   </p>
@@ -32,7 +32,7 @@
 
   <video controls>
     <source src="./video.mp4"alt="video"width="10%"height="30%">
-        </video>
+  </video>
     
 </ul>
 
